--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -7,5 +7,5 @@
 default = crawler.settings
 
 [deploy]
-#url = http://localhost:6800/
+url = https://moodscape-web-crawler.herokuapp.com/
 project = crawler
