--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ service-identity==21.1.0
 six==1.16.0
 tldextract==3.2.0
 Twisted==22.2.0
-twisted-iocpsupport==1.0.2
+#twisted-iocpsupport==1.0.2
 typing_extensions==4.1.1
 tzdata==2022.1
 tzlocal==4.1
