add missing scrapy configuration for Heroku deployment

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,6 +6,9 @@
 [settings]
 default = crawler.settings
 
+[scrapyd]
+application = herokuify_scrapyd.app.application
+
 [deploy]
 url = https://moodscape-web-crawler.herokuapp.com/
 project = crawler
