--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ requests==2.27.1
 requests-file==1.5.1
 Scrapy==2.6.1
 scrapyd==1.3.0
+scrapyd-client==1.2.0
 service-identity==21.1.0
 six==1.16.0
 tldextract==3.2.0
@@ -41,6 +42,7 @@ Twisted==22.2.0
 typing_extensions==4.1.1
 tzdata==2022.1
 tzlocal==4.1
+uberegg==0.1.1
 urllib3==1.26.9
 w3lib==1.22.0
 zope.interface==5.4.0
