--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,9 +6,10 @@
 [settings]
 default = crawler.settings
 
-[scrapyd]
-application = herokuify_scrapyd.app.application
+#[scrapyd]
+#application = herokuify_scrapyd.app.application
 
 [deploy]
 url = https://moodscape-web-crawler.herokuapp.com/
+#url = http://localhost:6800
 project = crawler
