--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ pymongo==4.0.2
 pyOpenSSL==22.0.0
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==303
+#pywin32==303
 queuelib==1.6.2
 requests==2.27.1
 requests-file==1.5.1
