--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,8 +6,8 @@
 [settings]
 default = crawler.settings
 
-#[scrapyd]
-#application = herokuify_scrapyd.app.application
+[scrapyd]
+application = herokuify_scrapyd.app.application
 
 [deploy]
 url = https://moodscape-web-crawler.herokuapp.com/
